# RagaVani

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  SNOWFLAKE_DEPLOYMENT_GUIDE.md  app.py  build_and_push.sh  deploy_to_snowflake.sql  make_executable.sh  pyproject.toml  requirements.txt  snowflake.yml
.streamlit/: config.toml
assets/: styles.css
attached_assets/: Pasted--Create-a-sophisticated-Indian-Classical-Music-Analysis-Synthesis-application-called-RagaVani-with-1743393508608.txt
backup/: 1_music_composer.py  README_COMPREHENSIVE.md  README_ORIGINAL.md
data/: raga_grammar.json  tala_patterns.json  user_database.json
logs/: api_calls.json  errors.json  user_activity.json
models/: README.md  README_COMPOSER.md
models/bilstm_composer/: README.md  params.json
models/cnngan_composer/: README.md  params.json
models/hybrid_composer/: README.md
modules/: __init__.py  audio_analysis.py  audio_analysis_hybrid.py  audio_analysis_simplified.py  audio_synthesis.py  healthcheck.py  music_composer_page.py  music_composition.py  neural_processing.py  neural_synthesis.py  raga_knowledge.py  symbolic_processing.py  tala_knowledge.py  visualization.py
pages/: music_composer.py  music_composer_fixed.py
public/: 404.html  index.html
public/assets/css/: styles.css
public/assets/js/: auth.js
services/: __init__.py  ai_service.py
utils/: __init__.py  audio_utils.py  env_utils.py  logging_utils.py  session_handler.py  snowflake_init.py
